Closed Bug 1159502 Opened 9 years ago Closed 9 years ago

Don't block onload for multipart images

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox37 --- unaffected
firefox38 --- ?
firefox39 --- affected
firefox40 --- fixed

People

(Reporter: seth, Assigned: seth)

Details

Attachments

(1 file)

We were never supposed to be blocking onload for multipart images, but somewhere along the line a bug got introduced and we are blocking onload now. This causes two issues:

- The throbber never stops for pages with multipart images.

- We get tons of console spew about "Double block onload".
Here's the patch. I could swear I wrote this exact code in the past...
Attachment #8598973 - Flags: review?(tnikkel)
Attachment #8598973 - Flags: review?(tnikkel) → review+
Requesting checkin. For a try job, please see bug 1159409, for which I'm also requesting checkin.
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/8e4ecd2f7a60
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Comment on attachment 8598973 [details] [diff] [review]
Don't block onload for multipart images

Approval Request Comment
[Feature/regressing bug #]: Not sure.
[User impact if declined]: We never stop the loading throbber for pages containing MJPEG streams.
[Describe test coverage new/current, TreeHerder]: On m-c.
[Risks and why]: Low risk.
[String/UUID change made/needed]: None.
Attachment #8598973 - Flags: approval-mozilla-aurora?
I'm assuming from comment 0 that you mean that this affects at least 37+ but may go further back.
Florin, since we're not sure when this regressed, can your team take a look to see if this is broken in 37 and 38? It may be trivial, but I'd like us to know. Thanks!
Flags: needinfo?(florin.mezei)
From discussion on irc sounds like this was working in 37.
Comment on attachment 8598973 [details] [diff] [review]
Don't block onload for multipart images

OK, surprisingly enough it turns out this isn't broken on Aurora...
Attachment #8598973 - Flags: approval-mozilla-aurora?
Flags: needinfo?(florin.mezei)
You need to log in before you can comment on or make changes to this bug.