Bug 1159502 - Don't block onload for multipart images. r=tn